Stephen #1609 - added tablet to media selector to fix link not working on tablet

--- a/src/sass/modules/tables.scss
+++ b/src/sass/modules/tables.scss
@@ -404,7 +404,7 @@
                     }
                 }
 
-                @media #{$desktop} {
+                @media #{$desktop, $tablet} {
                     a {
                         display: block;
                         position: absolute;
@@ -430,7 +430,7 @@
         tbody {
             tr {
                 td {
-                    @media #{$desktop} {
+                    @media #{$desktop, $tablet} {
                         a {
                             display: block;
                             position: absolute;
